--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "license": "BSD-3-Clause",
   "version": "0.8.0",
   "description": "This element is used to display a material panel.",
+  "homepage": "http://www.expandjs.com/elements/mat-panel",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
     "Maurizio Stefàno <m.stefano@expandjs.com>",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "mat-demo": "ExpandJS/mat-demo",
+    "mat-icon-button": "ExpandJS/mat-icon-button",
     "mat-item": "ExpandJS/mat-item",
     "mat-toolbar": "ExpandJS/mat-toolbar"
   }
