--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "license": "BSD-3-Clause",
   "version": "0.8.9",
   "description": "A custom element used to display a Material Design panel",
-  "homepage": "http://www.expandjs.com/elements/mat-panel",
+  "homepage": "http://expandjs.com/elements/mat-panel",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
     "Maurizio Stefàno <m.stefano@expandjs.com>",
