--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "mat-panel",
   "license": "BSD-3-Clause",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "A custom element used to display a Material Design panel",
   "homepage": "http://expandjs.com/elements/mat-panel",
   "authors": [
@@ -25,19 +25,19 @@
     "**/.*"
   ],
   "dependencies": {
-    "expandjs": "ExpandJS/expandjs",
-    "mat-menu-button": "ExpandJS/mat-menu-button",
-    "mat-paper": "ExpandJS/mat-paper",
-    "mat-toolbar": "ExpandJS/mat-toolbar",
-    "xp-collapse": "ExpandJS/xp-collapse",
-    "xp-master-state": "ExpandJS/xp-master-state",
-    "xp-slave-state": "ExpandJS/xp-slave-state",
-    "polymer": "Polymer/polymer"
+    "expandjs": "ExpandJS/expandjs#0.9.1",
+    "mat-menu-button": "ExpandJS/mat-menu-button#0.9.1",
+    "mat-paper": "ExpandJS/mat-paper#0.9.1",
+    "mat-toolbar": "ExpandJS/mat-toolbar#0.9.1",
+    "xp-collapse": "ExpandJS/xp-collapse#0.9.1",
+    "xp-master-state": "ExpandJS/xp-master-state#0.9.1",
+    "xp-slave-state": "ExpandJS/xp-slave-state#0.9.1",
+    "polymer": "Polymer/polymer#^1.0.4"
   },
   "devDependencies": {
-    "mat-demo": "ExpandJS/mat-demo",
-    "mat-icon-button": "ExpandJS/mat-icon-button",
-    "mat-item": "ExpandJS/mat-item",
-    "mat-toolbar": "ExpandJS/mat-toolbar"
+    "mat-demo": "ExpandJS/mat-demo#0.9.1",
+    "mat-icon-button": "ExpandJS/mat-icon-button#0.9.1",
+    "mat-item": "ExpandJS/mat-item#0.9.1",
+    "mat-toolbar": "ExpandJS/mat-toolbar#0.9.1"
   }
 }
