--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "mat-panel",
   "license": "BSD-3-Clause",
-  "version": "0.9.5",
+  "version": "0.9.6",
   "description": "A custom element used to display a Material Design panel",
   "homepage": "http://expandjs.com/elements/mat-panel",
   "authors": [
@@ -25,12 +25,12 @@
     "**/.*"
   ],
   "dependencies": {
-    "expandjs": "ExpandJS/expandjs#0.9.5",
-    "mat-paper": "ExpandJS/mat-paper#0.9.5",
-    "mat-toolbar": "ExpandJS/mat-toolbar#0.9.5",
-    "xp-collapse": "ExpandJS/xp-collapse#0.9.5",
-    "xp-master-state": "ExpandJS/xp-master-state#0.9.5",
-    "xp-slave-state": "ExpandJS/xp-slave-state#0.9.5",
+    "expandjs": "ExpandJS/expandjs#0.9.6",
+    "mat-paper": "ExpandJS/mat-paper#0.9.6",
+    "mat-toolbar": "ExpandJS/mat-toolbar#0.9.6",
+    "xp-collapse": "ExpandJS/xp-collapse#0.9.6",
+    "xp-master-behavior": "ExpandJS/xp-master-behavior#0.9.6",
+    "xp-slave-behavior": "ExpandJS/xp-slave-behavior#0.9.6",
     "polymer": "Polymer/polymer#^1.0.0"
   }
 }
