--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "mat-panel",
   "license": "BSD-3-Clause",
   "version": "0.9.6",
+  "main": "mat-panel.html",
   "description": "A custom element used to display a Material Design panel",
   "homepage": "http://expandjs.com/elements/mat-panel",
   "authors": [
@@ -16,10 +17,6 @@
     "html5",
     "expandjs",
     "web-components"
-  ],
-  "main": [
-    "mat-panel-group.html",
-    "mat-panel.html"
   ],
   "ignore": [
     "**/.*"
