--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
     "expandjs": "ExpandJS/expandjs#0.10.0",
     "mat-paper": "ExpandJS/mat-paper#0.10.0",
     "mat-spacing": "ExpandJS/mat-spacing#0.10.0",
-    "xp-collapse": "ExpandJS/xp-collapse#0.10.0",
+    "xp-collapse-behavior": "ExpandJS/xp-collapse-behavior#0.10.0",
     "xp-master-behavior": "ExpandJS/xp-master-behavior#0.10.0",
     "xp-slave-behavior": "ExpandJS/xp-slave-behavior#0.10.0",
     "polymer": "Polymer/polymer#^1.0.0"
